# mongolian

./: .gitattributes  .gitignore  LICENSE  README.md  index.md  national-standards.md  pyproject.toml  requirements.txt
archived-eac-publications/: README.md  内蒙古自治区民委关于发布“蒙古语言文字数字资源建设与共享工程”项目信息处理用蒙古文相关标准的公告.html
archived-eac-publications/data/: variant-set.txt  variants.txt  written-units.txt
archived-eac-publications/properties/: Mongolian_Written_Forms.txt  generate-properties-from-data.py
docs/: documents.md  index.md  national-standards.md
documents/: fvs-factors.pages
draft-utn/: README.md  draft-utn.pages  potential-changes.pages  utility.py
draft-utn/data/: Mongolian_Syllabic_Category.txt  Mongolian_Written_Forms.txt  _sandbox.py  characters.json  characters.yaml  contextual-conditions.swift  contextual_conditions.py  contextual_conditions.yaml  dump-json.py  phonetic-letters.txt  phonetic_letter_classes.yaml  phonetic_letters.yaml  syllabic-category.yaml  variant-set.txt  variants.txt  written-units.json  written-units.txt  written-units.yaml
font-tooling/: .gitignore  LICENSE  README.md  pyproject.toml
keyboard-layouts/: README.md
misc/: legacy-fonts.md
national-standards/: README.md  index.md
otl-dummy-fonts/: build.py  pyproject.toml  stateless.fea
otl-dummy-fonts/stateless/: classes.fea  lookups.fea  main.fea  stateless.fea
proposals/: fvs4.pages
sandbox-font/: LICENSE  README.md  names.py  otl.fea  utility.py
site/: .gitignore  .prettierignore  .prettierrc  README.md  mongolian-site.code-workspace  package-lock.json  package.json  svelte.config.js
unification/: data.txt  make-chart.py
utn/: README.md  eac-to-utn.md
utn-data/: categorization.yaml  characters.yaml  written-units.yaml
utn-font/: .gitignore  README.md  build.py  pyproject.toml
utn-font/source/: __init__.py  data.py  otl.py  tag_glyphs.py  utils.py
utn-font/sources/: data.py  stateless.py
utn-font/sources/variants.ufo/: fontinfo.plist  lib.plist
utn-font/sources/variants.ufo/glyphs/: A_.fina.glif  A_.medi.glif  A_a.isol.glif  B_.fina.glif  C_.fina.glif  C_.init.glif  C_h.init.glif  C_h.medi.glif  C_r.init.glif  D_.fina.glif  D_.medi.glif  D_d.fina.glif  D_d.medi.glif  F_.fina.glif  G_.fina.glif  G_.medi.glif  G_h.fina.glif  G_h.init.glif  G_h.medi.glif  H_.init.glif  H_h.init.glif  H_h.medi.glif  I_.init.glif  I_.isol.glif  J_.fina.glif  L_.fina.glif  M_.init.glif  N_.fina.glif  N_.init.glif  N_.medi.glif  O_.init.glif  O_.medi.glif  P_.fina.glif  P_.init.glif  R_.fina.glif  R_.init.glif  R_.medi.glif  R_h.medi.glif  S_h.medi.glif  T_.fina.glif  (+86 more)
utn-font/sources/written-units.ufo/glyphs/: B_.fina.glif  B_.init.glif  G_.init.glif  G_g.init.glif  H_2.init.glif  H_2.medi.glif  T_.medi.glif
utn-font/tests/: old-test.py  test.py  utils.py
utn-font/tests/reports/: eac-vs-utn-with-jirimutu-corpus.txt
(+791 files in other folders)
