[tool.poetry]
name = "mongolian-otl-dummy-fonts"
version = "0.1.0"
description = ""
authors = ["梁海 Liang Hai <lianghai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tptqscripttools = { path = "../../tptq/script-tools/", develop = true }

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
